fixed no scrollbar issue

--- a/code/services/static/styles/dataStyles.css
+++ b/code/services/static/styles/dataStyles.css
@@ -15,10 +15,6 @@ body {
     min-height: 0;
 }
 
-.preload {
-    overflow: hidden;
-}
-
 
 ::-webkit-scrollbar {
     width: 7px;
